@@ -14,6 +14,9 @@ ikiwiki (2.64) UNRELEASED; urgency=low
   * Directive documentation broken out of the plugin documentation and into 
     pages suitable to be used as an underlay. Thanks to Willu for doing most
     of the tedious work.
+  * Move the directive documentation into its own underlay, separate from
+    basewiki, since it's sorta large compared to the rest of basewiki.
+  * listdirectives: Enable use of the directives underlay.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 08 Sep 2008 19:21:20 -0400
 
